nacos/nacos-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ruoyi-nacos
  namespace: ruoyi-basic
spec:
  selector:
    app: ruoyi-nacos
  ports:
    - name: "8848"
      port: 8848
      targetPort: 8848
      nodePort: 30848
    - name: "9848"
      port: 9848
      targetPort: 9848
    - name: "9849"
      port: 9849
      targetPort: 9849
  type: NodePort
